--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,8 @@ body {
   justify-content: center;
   align-self: center;   
 }
+
+.total-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
