--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ body {
   box-shadow: none;
 }
 
+#submit-btn:focus {
+  outline: none;
+  box-shadow: none;
+}
+
 .dlt-btn {
   color: #ff0000;
   display: flex;
