--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,10 @@ body {
 }
 
 .App {
-  margin: 0;
+  margin: 1rem;
   padding: 1rem;
+  overflow: auto;
   height: auto;
-  min-height: 100vh;
 }
 
 #add-btn:focus {
