--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,6 +10,19 @@ body {
   height: auto;
 }
 
+#theme-toggler {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 50%;
+  transition: ease-in 0.25s;
+}
+
+#theme-toggler:focus {
+  outline: none;
+  box-shadow: none;
+}
+
 #add-btn:focus {
   outline: none;
   box-shadow: none;
