--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,10 +4,10 @@ body {
 }
 
 .App {
-  margin: 1rem;
+  margin: 0;
   padding: 1rem;
-  overflow: auto;
   height: auto;
+  min-height: 100vh;
 }
 
 #theme-toggler {
