Added ability to edit shifts to give application more functionality and make a full CRUD app

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -50,7 +50,15 @@ body {
   align-self: center;   
 }
 
+.edit-btn {
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  align-self: center;   
+}
+
 .total-wrapper {
   display: flex;
   justify-content: space-between;
 }
+
